@@ -16,34 +16,19 @@
 
 package io.warp10.continuum;
 
-import io.warp10.WarpConfig;
-import io.warp10.continuum.KafkaSynchronizedConsumerPool.ConsumerFactory;
-import io.warp10.continuum.gts.GTSHelper;
-import io.warp10.continuum.ingress.IngressMetadataConsumerFactory;
-import io.warp10.continuum.sensision.SensisionConstants;
-import io.warp10.continuum.store.thrift.data.Metadata;
-import io.warp10.continuum.thrift.data.HyperLogLogPlusParameters;
-import io.warp10.crypto.CryptoUtils;
-import io.warp10.crypto.OrderPreservingBase64;
-import io.warp10.script.HyperLogLogPlus;
-import io.warp10.sensision.Sensision;
-
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileReader;
 import java.io.FilenameFilter;
 import java.io.IOException;
 import java.io.PrintWriter;
-import java.net.URLDecoder;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.ConcurrentModificationException;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
-import java.util.List;
 import java.util.Map;
 import java.util.Properties;
 import java.util.Set;
@@ -51,18 +36,27 @@ import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 
-import kafka.javaapi.producer.Producer;
-import kafka.producer.KeyedMessage;
-import kafka.producer.ProducerConfig;
-
 import org.apache.thrift.TSerializer;
 import org.apache.thrift.protocol.TCompactProtocol;
-import org.joda.time.format.DateTimeFormat;
 import org.joda.time.format.ISODateTimeFormat;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import com.google.common.util.concurrent.RateLimiter;
+
+import io.warp10.WarpConfig;
+import io.warp10.WarpURLDecoder;
+import io.warp10.continuum.KafkaSynchronizedConsumerPool.ConsumerFactory;
+import io.warp10.continuum.gts.GTSHelper;
+import io.warp10.continuum.sensision.SensisionConstants;
+import io.warp10.continuum.store.thrift.data.Metadata;
+import io.warp10.crypto.CryptoUtils;
+import io.warp10.crypto.OrderPreservingBase64;
+import io.warp10.script.HyperLogLogPlus;
+import io.warp10.sensision.Sensision;
+import kafka.javaapi.producer.Producer;
+import kafka.producer.KeyedMessage;
+import kafka.producer.ProducerConfig;
 
 /**
  * This class manages the throttling of data ingestion.
@@ -232,7 +226,7 @@ public class ThrottlingManager {
    * @param labelsId
    * @throws WarpException
    */
-  public static void checkMADS(Metadata metadata, String producer, String owner, String application, long classId, long labelsId) throws WarpException {
+  public static void checkMADS(Metadata metadata, String producer, String owner, String application, long classId, long labelsId, boolean expose) throws WarpException {
         
     if (!loaded) {
       return;
@@ -265,7 +259,9 @@ public class ThrottlingManager {
         labels.put(SensisionConstants.SENSISION_LABEL_PRODUCER, producer);
         StringBuilder sb = new StringBuilder();
         sb.append("Geo Time Series ");
-        GTSHelper.metadataToString(sb, metadata.getName(), metadata.getLabels());
+        // Do not expose producer and owner as the update did not contain them so
+        // identifying the line responsible for the error is easier
+        GTSHelper.metadataToString(sb, metadata.getName(), metadata.getLabels(), false);
         sb.append(" would exceed your Monthly Active Data Streams limit (");
         sb.append(oProducerLimit);
         sb.append(").");
@@ -364,7 +360,7 @@ public class ThrottlingManager {
         if (cardinality > applicationLimit) {
           StringBuilder sb = new StringBuilder();
           sb.append("Geo Time Series ");
-          GTSHelper.metadataToString(sb, metadata.getName(), metadata.getLabels());
+          GTSHelper.metadataToString(sb, metadata.getName(), metadata.getLabels(), expose);
           sb.append(" would exceed the Monthly Active Data Streams limit for application '" + application + "' (");
           sb.append((long) Math.floor(applicationLimit / toleranceRatio));
           sb.append(").");
@@ -399,7 +395,7 @@ public class ThrottlingManager {
       if (cardinality > producerLimit) {
         StringBuilder sb = new StringBuilder();
         sb.append("Geo Time Series ");
-        GTSHelper.metadataToString(sb, metadata.getName(), metadata.getLabels());
+        GTSHelper.metadataToString(sb, metadata.getName(), metadata.getLabels(), expose);
         sb.append(" would exceed your Monthly Active Data Streams limit (");
         sb.append((long) Math.floor(producerLimit / toleranceRatio));
         sb.append(").");
@@ -427,7 +423,7 @@ public class ThrottlingManager {
    * @param count
    * @param maxwait Max wait per datapoint
    */
-  public static void checkDDP(Metadata metadata, String producer, String owner, String application, int count, long maxwait) throws WarpException {
+  public static void checkDDP(Metadata metadata, String producer, String owner, String application, int count, long maxwait, boolean expose) throws WarpException {
     if (!loaded) {
       return;
     }
@@ -461,7 +457,7 @@ public class ThrottlingManager {
         StringBuilder sb = new StringBuilder();
         sb.append("Storing data for ");
         if (null != metadata) {
-          GTSHelper.metadataToString(sb, metadata.getName(), metadata.getLabels());
+          GTSHelper.metadataToString(sb, metadata.getName(), metadata.getLabels(), expose);
         }
         sb.append(" would incur a wait greater than ");
         sb.append(appMaxWait);
@@ -484,7 +480,7 @@ public class ThrottlingManager {
       StringBuilder sb = new StringBuilder();
       sb.append("Storing data for ");
       if (null != metadata) {
-        GTSHelper.metadataToString(sb, metadata.getName(), metadata.getLabels());
+        GTSHelper.metadataToString(sb, metadata.getName(), metadata.getLabels(), expose);
       }
       sb.append(" would incur a wait greater than ");
       sb.append(producerMaxWait);
@@ -499,8 +495,8 @@ public class ThrottlingManager {
     }
   }
 
-  public static void checkDDP(Metadata metadata, String producer, String owner, String application, int count) throws WarpException {
-    checkDDP(metadata, producer, owner, application, count, MAXWAIT_PER_DATAPOINT);
+  public static void checkDDP(Metadata metadata, String producer, String owner, String application, int count, boolean expose) throws WarpException {
+    checkDDP(metadata, producer, owner, application, count, MAXWAIT_PER_DATAPOINT, expose);
   }
   
   public static Map<String,Object> getLimits(String producer, String app) {
@@ -765,7 +761,7 @@ public class ThrottlingManager {
                   entity = uuid.toString().toLowerCase();
                 } else {
                   // Remove leading '+' and decode application name which may be URL encoded
-                  entity = URLDecoder.decode(entity.substring(1), StandardCharsets.UTF_8.name());
+                  entity = WarpURLDecoder.decode(entity.substring(1), StandardCharsets.UTF_8);
                 }
                 
                 if ("-".equals(estimator)) {
@@ -1102,13 +1098,13 @@ public class ThrottlingManager {
   
   private static void dumpCurrentConfig() {
     if (null != dir && !producerHLLPEstimators.isEmpty() && !applicationHLLPEstimators.isEmpty()) {
-      File config;
-      if (".dump".endsWith(THROTTLING_MANAGER_SUFFIX)) {
-        config = new File(dir, "current" + THROTTLING_MANAGER_SUFFIX + ".dump.");      
-      } else {
-        config = new File(dir, "current" + THROTTLING_MANAGER_SUFFIX + ".dump");
+      String filename = "current" + THROTTLING_MANAGER_SUFFIX + ".dump";
+      // Make sure the filename does not end with THROTTLING_MANAGER_SUFFIX, else it will be automatically loaded.
+      if (filename.endsWith(THROTTLING_MANAGER_SUFFIX)) {
+        filename += ".";
       }
-      
+      File config = new File(dir, filename);
+
       try {
         PrintWriter pw = new PrintWriter(config);
         
