@@ -29,7 +29,6 @@ import java.io.OutputStream;
 import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.math.BigInteger;
-import java.net.URLDecoder;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.text.ParseException;
@@ -58,8 +57,6 @@ import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
-import org.apache.commons.lang3.JavaVersion;
-import org.apache.commons.lang3.SystemUtils;
 import org.apache.hadoop.util.ShutdownHookManager;
 import org.apache.thrift.TDeserializer;
 import org.apache.thrift.TException;
@@ -87,6 +84,7 @@ import io.warp10.SSLUtils;
 import io.warp10.ThrowableUtils;
 import io.warp10.WarpConfig;
 import io.warp10.WarpManager;
+import io.warp10.WarpURLDecoder;
 import io.warp10.continuum.Configuration;
 import io.warp10.continuum.JettyUtil;
 import io.warp10.continuum.KafkaProducerPool;
@@ -351,7 +349,7 @@ public class Ingress extends AbstractHandler implements Runnable {
     this.maxValueSize = Long.parseLong(props.getProperty(Configuration.INGRESS_VALUE_MAXSIZE));
     
     if (this.maxValueSize > (this.DATA_MESSAGES_THRESHOLD / 2) - 64) {
-      throw new RuntimeException("Value of '" + Configuration.INGRESS_VALUE_MAXSIZE + "' cannot exceed that half of '" + Configuration.INGRESS_KAFKA_DATA_MAXSIZE + "' minus 64.");
+      throw new RuntimeException("Value of '" + Configuration.INGRESS_VALUE_MAXSIZE + "' cannot exceed half of '" + Configuration.INGRESS_KAFKA_DATA_MAXSIZE + "' minus 64.");
     }
     
     extractKeys(this.keystore, props);
@@ -696,6 +694,7 @@ public class Ingress extends AbstractHandler implements Runnable {
       return;
     } else if (target.equals(Constants.API_ENDPOINT_DELETE)) {
       handleDelete(target, baseRequest, request, response);
+      return;
     } else if (Constants.API_ENDPOINT_CHECK.equals(target)) {
       baseRequest.setHandled(true);
       response.setStatus(HttpServletResponse.SC_OK);
@@ -764,7 +763,12 @@ public class Ingress extends AbstractHandler implements Runnable {
         }
       }
       
+      boolean expose = false;
+      
       if (writeToken.getAttributesSize() > 0) {
+        
+        expose = writeToken.getAttributes().containsKey(Constants.TOKEN_ATTR_EXPOSE);
+        
         if (writeToken.getAttributes().containsKey(Constants.TOKEN_ATTR_TTL)
             || writeToken.getAttributes().containsKey(Constants.TOKEN_ATTR_DPTS)) {
           if (null == kafkaDataMessageAttributes) {
@@ -1046,8 +1050,8 @@ public class Ingress extends AbstractHandler implements Runnable {
             //
             
             if (null != lastencoder && lastencoder.size() > 0) {
-              ThrottlingManager.checkMADS(lastencoder.getMetadata(), producer, owner, application, lastencoder.getClassId(), lastencoder.getLabelsId());
-              ThrottlingManager.checkDDP(lastencoder.getMetadata(), producer, owner, application, (int) lastencoder.getCount());
+              ThrottlingManager.checkMADS(lastencoder.getMetadata(), producer, owner, application, lastencoder.getClassId(), lastencoder.getLabelsId(), expose);
+              ThrottlingManager.checkDDP(lastencoder.getMetadata(), producer, owner, application, (int) lastencoder.getCount(), expose);
             }
             
             boolean pushMeta = false;
@@ -1136,8 +1140,8 @@ public class Ingress extends AbstractHandler implements Runnable {
         } while (true); 
         
         if (null != lastencoder && lastencoder.size() > 0) {
-          ThrottlingManager.checkMADS(lastencoder.getMetadata(), producer, owner, application, lastencoder.getClassId(), lastencoder.getLabelsId());
-          ThrottlingManager.checkDDP(lastencoder.getMetadata(), producer, owner, application, (int) lastencoder.getCount());
+          ThrottlingManager.checkMADS(lastencoder.getMetadata(), producer, owner, application, lastencoder.getClassId(), lastencoder.getLabelsId(), expose);
+          ThrottlingManager.checkDDP(lastencoder.getMetadata(), producer, owner, application, (int) lastencoder.getCount(), expose);
 
           pushDataMessage(lastencoder, kafkaDataMessageAttributes);
           
@@ -1435,14 +1439,13 @@ public class Ingress extends AbstractHandler implements Runnable {
     // For delete operations, producer and owner MUST be equal
     //
     
-    if (!producer.equals(owner)) {
+    if (null == producer || !producer.equals(owner)) {
       throw new IOException("Invalid write token for deletion.");
     }
     
     Map<String,String> sensisionLabels = new HashMap<String,String>();
     sensisionLabels.put(SensisionConstants.SENSISION_LABEL_PRODUCER, producer);
 
-    long count = 0;
     long gts = 0;
     
     boolean completeDeletion = false;
@@ -1453,12 +1456,9 @@ public class Ingress extends AbstractHandler implements Runnable {
 
     PrintWriter pw = null;
     
+    boolean metaonly = null != request.getParameter(Constants.HTTP_PARAM_METAONLY);
+
     try {      
-      if (null == producer || null == owner) {
-        response.sendError(HttpServletResponse.SC_FORBIDDEN, "Invalid token.");
-        return;
-      }
-      
       //
       // Build extra labels
       //
@@ -1498,7 +1498,11 @@ public class Ingress extends AbstractHandler implements Runnable {
       
       long minage = 0L;
 
-      if (null != minagestr) {
+      if (null != minagestr) {        
+        if (metaonly) {
+          throw new IOException("Parameter '" + Constants.HTTP_PARAM_MINAGE + "' cannot be specified with '" + Constants.HTTP_PARAM_METAONLY + "'.");
+        }
+        
         minage = Long.parseLong(minagestr);
         
         if (minage < 0) {
@@ -1511,11 +1515,7 @@ public class Ingress extends AbstractHandler implements Runnable {
           throw new IOException("Both " + Constants.HTTP_PARAM_START + " and " + Constants.HTTP_PARAM_END + " should be defined.");
         }
         if (startstr.contains("T")) {
-          if (SystemUtils.isJavaVersionAtLeast(JavaVersion.JAVA_1_8)) {
-            start = io.warp10.script.unary.TOTIMESTAMP.parseTimestamp(startstr);
-          } else {
-            start = fmt.parseDateTime(startstr).getMillis() * Constants.TIME_UNITS_PER_MS;
-          }
+          start = io.warp10.script.unary.TOTIMESTAMP.parseTimestamp(startstr);
         } else {
           start = Long.valueOf(startstr);
         }
@@ -1526,20 +1526,30 @@ public class Ingress extends AbstractHandler implements Runnable {
           throw new IOException("Both " + Constants.HTTP_PARAM_START + " and " + Constants.HTTP_PARAM_END + " should be defined.");
         }
         if (endstr.contains("T")) {
-          if (SystemUtils.isJavaVersionAtLeast(JavaVersion.JAVA_1_8)) {
-            end = io.warp10.script.unary.TOTIMESTAMP.parseTimestamp(endstr);
-          } else {
-            end = fmt.parseDateTime(endstr).getMillis() * Constants.TIME_UNITS_PER_MS;
-          }
+          end = io.warp10.script.unary.TOTIMESTAMP.parseTimestamp(endstr);
         } else {
           end = Long.valueOf(endstr);
         }
       }
 
-      if (Long.MIN_VALUE == start && Long.MAX_VALUE == end && null == request.getParameter(Constants.HTTP_PARAM_DELETEALL)) {
-        throw new IOException("Parameter " + Constants.HTTP_PARAM_DELETEALL + " should be set when deleting a full range.");
+      if (Long.MIN_VALUE == start && Long.MAX_VALUE == end && (null == request.getParameter(Constants.HTTP_PARAM_DELETEALL) && !metaonly)) {
+        throw new IOException("Parameter " + Constants.HTTP_PARAM_DELETEALL + " or " + Constants.HTTP_PARAM_METAONLY + " should be set when no time range is specified.");
       }
       
+      if (Long.MIN_VALUE != start || Long.MAX_VALUE != end) {
+        hasRange = true;
+      }
+      
+      if (metaonly && !Constants.DELETE_METAONLY_SUPPORT) {
+        response.sendError(HttpServletResponse.SC_INTERNAL_SERVER_ERROR, "Parameter " + Constants.HTTP_PARAM_METAONLY + " cannot be used as metaonly support is not enabled.");
+        return;        
+      }
+      
+      if (metaonly && hasRange) {
+        response.sendError(HttpServletResponse.SC_INTERNAL_SERVER_ERROR, "Parameter " + Constants.HTTP_PARAM_METAONLY + " can only be set if no range is specified.");
+        return;
+      }
+
       if (start > end) {
         throw new IOException("Invalid time range specification.");
       }
@@ -1565,7 +1575,7 @@ public class Ingress extends AbstractHandler implements Runnable {
         return;
       }
       
-      String classSelector = URLDecoder.decode(m.group(1), StandardCharsets.UTF_8.name());
+      String classSelector = WarpURLDecoder.decode(m.group(1), StandardCharsets.UTF_8);
       String labelsSelection = m.group(2);
       
       Map<String,String> labelsSelectors;
@@ -1596,6 +1606,7 @@ public class Ingress extends AbstractHandler implements Runnable {
       pw = response.getWriter();
       StringBuilder sb = new StringBuilder();
 
+      boolean expose = writeToken.getAttributesSize() > 0 && writeToken.getAttributes().containsKey(Constants.TOKEN_ATTR_EXPOSE);
       //
       // Shuffle only if not in dryrun mode
       //
@@ -1617,6 +1628,25 @@ public class Ingress extends AbstractHandler implements Runnable {
         TSerializer serializer = new TSerializer(new TCompactProtocol.Factory());
         
         DirectoryRequest drequest = new DirectoryRequest();
+        
+        Long activeAfter = null == request.getParameter(Constants.HTTP_PARAM_ACTIVEAFTER) ? null : Long.parseLong(request.getParameter(Constants.HTTP_PARAM_ACTIVEAFTER));
+        Long quietAfter = null == request.getParameter(Constants.HTTP_PARAM_QUIETAFTER) ? null : Long.parseLong(request.getParameter(Constants.HTTP_PARAM_QUIETAFTER));
+
+        if (!Constants.DELETE_ACTIVITY_SUPPORT) {
+          if (null != activeAfter || null != quietAfter) {
+            response.sendError(HttpServletResponse.SC_INTERNAL_SERVER_ERROR, "Activity based selection is disabled by configuration.");
+            return;
+          }
+        }
+        
+        if (null != activeAfter) {
+          drequest.setActiveAfter(activeAfter);
+        }
+        
+        if (null != quietAfter) {
+          drequest.setQuietAfter(quietAfter);
+        }
+        
         drequest.setClassSelectors(clsSels);
         drequest.setLabelsSelectors(lblsSels);
         
@@ -1760,36 +1790,37 @@ public class Ingress extends AbstractHandler implements Runnable {
           while(shufflediterator.hasNext()) {
             Metadata metadata = shufflediterator.next();
             
-            if (!dryrun) {
-              if (null != this.plugin) {
-                if (!this.plugin.delete(this, writeToken, metadata)) {
-                  continue;
-                }
-              }
-              pushDeleteMessage(start, end, minage, metadata);
-              
-              if (Long.MAX_VALUE == end && Long.MIN_VALUE == start && 0 == minage) {
-                completeDeletion = true;
-                // We must also push the metadata deletion and remove the metadata from the cache
-                Metadata meta = new Metadata(metadata);
-                meta.setSource(Configuration.INGRESS_METADATA_DELETE_SOURCE);
-                pushMetadataMessage(meta);          
-                byte[] bytes = new byte[16];
-                // We know class/labels Id were computed in pushMetadataMessage
-                GTSHelper.fillGTSIds(bytes, 0, meta.getClassId(), meta.getLabelsId());
-                BigInteger key = new BigInteger(bytes);
-                synchronized(this.metadataCache) {
-                  this.metadataCache.remove(key);
-                }
+            if (null != this.plugin) {
+              if (!this.plugin.delete(this, writeToken, metadata)) {
+                continue;
               }
             }
-            
+
+            if (!metaonly) {
+              pushDeleteMessage(start, end, minage, metadata);
+            }
+
+            if (Long.MAX_VALUE == end && Long.MIN_VALUE == start && 0 == minage) {
+              completeDeletion = true;
+              // We must also push the metadata deletion and remove the metadata from the cache
+              Metadata meta = new Metadata(metadata);
+              meta.setSource(Configuration.INGRESS_METADATA_DELETE_SOURCE);
+              pushMetadataMessage(meta);
+              byte[] bytes = new byte[16];
+              // We know class/labels Id were computed in pushMetadataMessage
+              GTSHelper.fillGTSIds(bytes, 0, meta.getClassId(), meta.getLabelsId());
+              BigInteger key = new BigInteger(bytes);
+              synchronized(this.metadataCache) {
+                this.metadataCache.remove(key);
+              }
+            }
+
             sb.setLength(0);
             
-            GTSHelper.metadataToString(sb, metadata.getName(), metadata.getLabels());
+            GTSHelper.metadataToString(sb, metadata.getName(), metadata.getLabels(), expose);
             
             if (metadata.getAttributesSize() > 0) {
-              GTSHelper.labelsToString(sb, metadata.getAttributes());
+              GTSHelper.labelsToString(sb, metadata.getAttributes(), true);
             } else {
               sb.append("{}");
             }
@@ -1822,7 +1853,9 @@ public class Ingress extends AbstractHandler implements Runnable {
                 }
               }
 
-              pushDeleteMessage(start, end, minage, metadata);
+              if (!metaonly) {
+                pushDeleteMessage(start, end, minage, metadata);
+              }
               
               if (Long.MAX_VALUE == end && Long.MIN_VALUE == start && 0 == minage) {
                 completeDeletion = true;
@@ -1842,10 +1875,10 @@ public class Ingress extends AbstractHandler implements Runnable {
             
             sb.setLength(0);
             
-            GTSHelper.metadataToString(sb, metadata.getName(), metadata.getLabels());
+            GTSHelper.metadataToString(sb, metadata.getName(), metadata.getLabels(), expose);
             
             if (metadata.getAttributesSize() > 0) {
-              GTSHelper.labelsToString(sb, metadata.getAttributes());
+              GTSHelper.labelsToString(sb, metadata.getAttributes(), true);
             } else {
               sb.append("{}");
             }
@@ -1880,7 +1913,9 @@ public class Ingress extends AbstractHandler implements Runnable {
     } finally {
       // Flush delete messages
       if (!dryrun) {
-        pushDeleteMessage(0L,0L,0L,null);
+        if (!metaonly) {
+          pushDeleteMessage(0L,0L,0L,null);
+        }
         if (completeDeletion) {
           pushMetadataMessage(null, null);
         }
